--- a/html/Event.html
+++ b/html/Event.html
@@ -8,12 +8,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/mainscript.css">
     <link rel="stylesheet" href="../css/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
-    <script src="../css/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js" ></script>
+    <script src="../js/angular-1.8.2/angular.min.js"></script>
     <script src="../js/popper.js"></script>
+    <script src="../js/angular-1.8.2/angular-route.min.js"></script>
 </head>
-<body>
-
-    <div ng-app="myApp">
+<body ng-app="myApp">
+    <div ng-view>
         <div class="mainx" ng-controller="DetailProductController">
         <!--header-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -163,7 +163,34 @@
 </body>
 <script src="../js/angular-1.8.2/angular.min.js"></script>
 <script>
-    const app = angular.module("myApp",[])
+    const app = angular.module("myApp",["ngRoute"])
+    app.config(($routeProvider) => {
+        $LocationProvider.hashPrefix("")
+        $routeProvider
+            .when("/", {
+                templateUrl : "index.html"
+            })
+            .when("/detailproduct", {
+                templateUrl : "DetailProduct.html"
+            })
+            .when("/event", {
+                templateUrl : "Event.html"
+            })
+            .when("/product", {
+                templateUrl : "Product.html"
+            })
+            .when("/sign",{
+                templateUrl: "SignInUp.html"
+            })
+            .when("/storeinfo",{
+                templateUrl: "StoreInfo.html"
+            })
+            .when("/Cart",{
+                templateUrl: "Cart.html"
+            })
+            
+        ;
+    })
     app.controller("DetailProductController",($scope) => {
         $scope.index = 1
         $scope.src = [
