--- a/html/Product.html
+++ b/html/Product.html
@@ -8,12 +8,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/mainscript.css">
     <link rel="stylesheet" href="../css/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+    <script src="../js/angular-1.8.2/angular.min.js"></script>
     <script src="../js/popper.js"></script>
+    <script src="../js/angular-1.8.2/angular-route.min.js"></script>
 </head>
 <body>
 
     <div ng-app="myApp">
-        <div class="mainx">
+        <div class="mainx" ng-view>
         <!--header-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid row" style="justify-content: space-between">
@@ -185,6 +187,33 @@
 </body>
 <script src="../js/angular-1.8.2/angular.min.js"></script>
 <script>
-    const app = angular.module("myApp",[])
+    const app = angular.module("myApp",["ngRoute"])
+    app.config(($routeProvider) => {
+        $LocationProvider.hashPrefix("")
+        $routeProvider
+            .when("/", {
+                templateUrl : "index.html"
+            })
+            .when("/detailproduct", {
+                templateUrl : "DetailProduct.html"
+            })
+            .when("/event", {
+                templateUrl : "Event.html"
+            })
+            .when("/product", {
+                templateUrl : "Product.html"
+            })
+            .when("/sign",{
+                templateUrl: "SignInUp.html"
+            })
+            .when("/storeinfo",{
+                templateUrl: "StoreInfo.html"
+            })
+            .when("/Cart",{
+                templateUrl: "Cart.html"
+            })
+            
+        ;
+    })
 </script>
 </html>
